Add ErrorProne + NullAway static analysis with OnlyNullMarked=true
Set up ErrorProne (2.47.0) and NullAway (0.13.1) as compiler plugins
across all modules. NullAway is configured with OnlyNullMarked=true
so it only checks code annotated with @NullMarked (none yet). JSpecify
1.0.0 is added to dependencyManagement for future use.

ErrorProne caught and this commit fixes several real bugs:
- ThrowNull: throw null -> throw new NoSuchElementException() in ResultSet
- InfiniteRecursion: restore() calling itself in YouTrackDBInternalEmbedded
- SelfEquals: NAME.equals(NAME) -> NAME.equals(that.getName()) in collates
- SelfAssignment: removed dead variable = variable lines in tests
- EqualsHashCode: added hashCode() to YTDBEmptyProperty and LinkBag
- DoubleBraceInitialization: replaced with Map.of()/Set.of() everywhere

Intentional patterns suppressed with @SuppressWarnings:
- ComparableType on validation comparables and sentinel keys
- JUnit4TestNotRun on intentionally disabled test methods

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>